# sovereign-rag

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  test_import.py
.github/: FUNDING.yml
.github/workflows/: FUNDING.yml  build.yml  docs.yml
chroma_db/: chroma.sqlite3
chroma_db/6f5e69a1-8b32-4763-9255-962188ca5b0d/: index_metadata.pickle
docs/: index.md  troubleshooting.md
docs/development/: architecture.md  github-pages.md  testing.md
docs/getting-started/: install.md  quickstart.md
docs/reference/: cli.md  configuration.md  makefile.md
docs/stylesheets/: extra.css
docs/user-guide/: analyze.md  changed-files.md  ingest.md  reports.md
requirements/: requirements.txt
sample_data/: test1.py  test3.txt
sample_data/subdir/: test2.py
src/: cli.py  html_report.py  ingest.py  query.py
src/sovereign_rag/: __init__.py  cli.py  html_report.py  ingest.py  query.py
tests/: conftest.py  test_html_report.py  test_ingest.py  test_query.py
