[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-rag"
version = "0.1.0"
description = "Sovereign Retrieval Augmented Generation for Secure Code Analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
sovereign-rag = "sovereign_rag.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".venv", "__pycache__"]
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["sovereign_rag"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
